--- a/products/photocrati_nextgen/modules/nextgen_pagination/static/style.css
+++ b/products/photocrati_nextgen/modules/nextgen_pagination/static/style.css
@@ -4,7 +4,7 @@
     clear: both !important;
     display: block !important;
     padding-top: 15px;
-    padding-bottom: 2px;
+    padding-bottom: 3px;
     text-align: center;
 }
 
